[FIX] refactor profile routes
